Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
/* ... */
#login-section button .button-text {
    font-size: 16px;
    font-weight: 600;
}

#login-section button .ui-icon {
    padding-left: 10px;
    font-size: 16px;
    display: inline;
}

#login-section button:hover {
    background: var(--focused-blue);
    border: solid var(--default-border-width) var(--focused-blue);
    cursor: pointer;
}

#login-section form div label {
    margin-bottom: 8px;
    display: block;
    line-height: 16px;
}

#login-language-section ul {
    list-style: none;
    text-align: center;
}

#login-language-section ul li {
    display:inline-block;
}

#login-language-section ul li:not(:first-child):before {
    content: "|";
    margin-right: 5px;
}

#login-language-section ul li a {
    padding: 0;
    color: var(--medium-gray);
    font-size: 0.8rem;
    text-decoration: none;
}

#login-language-section ul li.active a,
#login-language-section ul li a:hover {
    color: var(--focused-blue);
}

.login-note {
    background: var(--medium-gray);
    margin: 32px -32px 0 -32px;
    padding: 32px;
    color: var(--cloudy-gray);
    hyphens: auto;
    line-height: 22px;
    border-radius: 0 0 var(--default-border-radius) var(--default-border-radius);
}

.legal-dialog {
    width: 640px;
    min-height: 480px;
}

.legal-texts-select-menu {
    margin: 0 10px 10px 0;
    width: 250px;
}

.select-note {
    padding: 16px 32px 16px 32px;
    color: var(--pure-white);
    hyphens: auto;
    line-height: 22px;
    max-height: 400px;
    overflow-y: auto;
}

#validationErrorsDialog {
    overflow-y: hidden;
}

#validationErrorsDialog > div > p {
    margin: var(--default-full-size) var(--default-double-size);
}

#validationErrorsList_content {
    border: 0;
}

.ui-dialog-content .dialog-text {
    padding: 0 32px 16px 32px;
    hyphens: auto;
    line-height: 22px;
}

.ui-dialog-content .select-selector {
    padding: 16px 32px 16px 32px;
}

.ui-dialog-content .select-selector .ui-selectonemenu {
    width: 100%;
    box-sizing: border-box;
}

.client-select-dialog {
    background: var(--light-gray);
}

.client-select-dialog > .ui-dialog-titlebar > .ui-dialog-title {
    color: var(--carbon-blue);
    font-size: 150%;
    margin-top: 25px;
    line-height: 150%;
}

.client-select-dialog > .ui-dialog-content {
    padding-left: 0;
    padding-right: 0;
}

#select-session-client-form > .select-client-selector > .ui-selectonemenu {
    margin-top: 8px;
    width: 100%;
    box-sizing: border-box;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid {
    margin-top: 20px;
    width: 100%;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even {
    background: transparent;
}

#select-session-client-form > .select-client-selector > .ui-panelgrid > tbody > .ui-panelgrid-even > .ui-panelgrid-cell {
    padding: 0;
}

.client-select-dialog > .ui-widget-header {
    padding-left: 32px;
    background: transparent;
}

.extended-search-input-field {
    width: 100%;
}

#configureColumnsForm .configure-columns-button {
    display: inline-block !important;
    height: var(--input-height);
}

#configureColumnsForm .configure-columns-button .ui-selectcheckboxmenu-label-container {
    padding: 0;
}

#configureColumnsForm .configure-columns-button .ui-selectcheckboxmenu-label {
    border-radius: var(--default-border-radius);
    height: var(--input-height);
}

#configureColumnsForm .configure-columns-button .ui-selectcheckboxmenu-label::after {
    font-family: 'FontAwesome';
    content: '\f0db';
}

#configureColumnsForm.ui-selectcheckboxmenu-panel .ui-selectcheckboxmenu-header,
#configureColumnsForm .configure-columns-button .ui-selectcheckboxmenu-trigger {
    display: none;
}

#configureFilters > div {
    padding: 0 var(--default-full-size) var(--default-full-size) var(--default-full-size);
}

#configureFilters .ui-outputlabel {
    line-height: var(--default-double-size);
    height: var(--default-double-size);
}

#configureFilters .ui-outputlabel:not(:first-child) {
    margin-left: var(--default-double-size);
}

#searchResultTabView\:configureFilters {
    margin: 0 0 0 16px;
}

.filter-span {
    display: inline-block;
    margin-right: var(--default-double-size);
    width: 220px;
}

#dropDownMenus {
    float: left;
    margin-top: calc((var(--input-height) + var(--input-padding)) * -1);
    margin-left: var(--default-full-size);
}

#dropDownMenus button {
    margin-right: var(--default-half-size);
}

.ui-datatable.default-layout > div.ui-datatable-tablewrapper > table  > tbody > tr > td.hierarchy-info {
    text-overflow: clip;
}

.hierarchy-info {
    position: relative;
    width: calc(var(--default-double-size) + var(--default-full-size));
}

.hierarchy-info > i {
    color: var(--blue);
    left: 42px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%) rotate(45deg);
}

.allSelectableOverlayPanel {
    top: 36px;
    left: 16px;
}

.allSelectableOverlayPanel ul {
    list-style: none;
}

.allSelectableOverlayPanel ul li {
    margin-top: 5px;
}

.allSelectableOverlayPanel ul li:first-child {
    margin-top: 0;
}

#processesTabView\:processesForm\:processesTable .ui-row-toggler {
    margin-right: 8px;
}

#processesTabView\:processesForm\:processesTable .label {
    vertical-align: top;
}

#processesTabView\:processesForm\:processesTable .value > .ui-datatable thead {
    display: none;
}

#processesTabView\:processesForm\:processesTable .row-expansion-wrapper > table,
#processesTabView\:processesForm\:processesTable .row-expansion-wrapper > div {
    margin-left: 112px;
    padding: 0;
    width: calc(100% - 112px);
}

#processesTabView\:processesForm\:processesTable .row-expansion-wrapper > div .ui-panel-titlebar,
#processesTabView\:processesForm\:processesTable .row-expansion-wrapper > div .ui-panel-content {
    background: none;
    color: var(--carbon-blue);
    display: inline-block;
    max-width: 50%;
    padding: 0;
}
/* ... */

